[package]
name = "helm-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = {version = "0.91.0", features = ["runtime", "derive"]}
k8s-openapi = {version = "0.22.0", features = ["latest"]}
tokio = {version = "1.38.0", features = ["full"]}
futures = "0.3.30"
thiserror = "1.0.61"